# emgen

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: emgen.yml
docker/: docker-mssql-2019.dockerfile
docker/certs/: server-full.crt  server.crt  server.key  server.pem
src/: entity_generator.rs  lib.rs
src/databases/: mod.rs  mssql.rs
src/generators/: entities.rs  mod.rs
tests/integration/: mod.rs  test_generator.rs  test_mssql.rs
tests/unit/: mod.rs  test_entity.rs
