[package]
name = "emgen"
version = "0.1.1"
edition = "2021"
description = "Generate Rust Entity Models from MSSQL tables with EMGen."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sturzaam/emgen"

[dependencies]
tiberius = "0.12.3"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
convert_case = "0.5"
prettyplease = "0.2.29"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
tracing = "0.1.41"
thiserror = "2.0.11"
async-trait = "0.1.86"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
